--- a/gallery/projects.html
+++ b/gallery/projects.html
@@ -16,7 +16,7 @@
 			gtag('config', 'UA-163220302-1');
 		</script>
 
-		<title>Aplus Paint and Varnish Inc.</title>  
+		<title>A1 Gazon</title>  
 		<meta charset="utf-8" />
 		<meta name="description" content="Residential and commercial painting in Montreal area" />	
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -31,7 +31,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>APlus</strong> Paint and Varnish Inc.</a></h1>
+						<h1><a href="index.html"><strong>A1 Gazon</strong></a></h1>
 						<nav>
 							<ul>
 								<li><a href="../index.html" class="icon solid fa-arrow-circle-left">Back</a></li>
