--- a/fr.html
+++ b/fr.html
@@ -123,10 +123,7 @@
         <nav>
           <ul id="menu">
             <li>
-              <a href="#interior"><b>Intérieur</b></a>
-            </li>
-            <li>
-              <a href="#exterior"><b>Extérieur</b></a>
+              <a href="#service"><b>Service</b></a>
             </li>
             <li>
               <a href="gallery/projectsfr.html"><b>Galerie</b></a>
@@ -140,183 +137,16 @@
       <!-- Main -->
       <div id="main">
         <!-- Interior -->
-        <article id="interior">
-          <center><h1 class="major">Intérieur</h1></center>
-          <ul class="actions">
-            <li>
-              <a href="#painting" class="button"><strong>Peinture</strong></a>
-            </li>
-            <li>
-              <a href="#varnishing" class="button"><strong>Vernis</strong></a>
-            </li>
-            <li>
-              <a href="#woodwork" class="button"><strong>Les Boiseries</strong></a>
-            </li>
-            <li>
-              <a href="#fauxFinishing" class="button"><strong>Faux Finition</strong></a>
-            </li>
-          </ul>
-
-          <br />
-          <h3>Commentaire Client</h3>
-          <div>
-            “Anthony et son équipe sont super! Ils sont professionnels, rapides et ponctuels, ils
-            fournissent un travail de qualité et ils sont tous très sympathiques. Je recommanderais
-            A Plus à mes amis et à ma famille!”
-          </div>
-          <div style="float: right">-Tony A.</div>
-          <br />
-          <div style="float: right">
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-          </div>
+        <article id="service">
+          <center><h1 class="major">Service</h1></center>
         </article>
-
-        <article id="painting">
-          <center><h1 class="major">Peinture</h1></center>
-          <span class="image main"><img src="images/painting.jpg" alt="" /></span>
-          <p>
-            Chez <strong>A Plus</strong>, nous offrons une peinture intérieure résidentielle et
-            commerciale complète dans toute la région de Montréal. Que vous ayez un petit
-            appartement, une grande maison ou un bureau, l'équipe A Plus vise l'excellence et
-            veillera à ce que votre propriété soit à son meilleur.
-          </p>
-        </article>
-
-        <article id="varnishing">
-          <center><h1 class="major">Vernis</h1></center>
-          <span class="image main"><img src="images/varnishing.jpg" alt="Varnish" /></span>
-          <p>
-            L'une de nos principales spécialités est la teinture et le vernissage. Nous faisons
-            tout, de la charpente en bois nouvellement installée à la rénovation de vieilles portes.
-          </p>
-        </article>
-
-        <article id="woodwork">
-          <center><h1 class="major">Les Boiseries</h1></center>
-          <span class="image main"><img src="images/woodwork.jpg" alt="" /></span>
-          <p>
-            A plus donne aux meubles un nouveau souffle. En utilisant la laque et des produits
-            spécialisés, nous sommes en mesure de transformer complètement les vieux meubles en
-            nouveaux meubles à une fraction du coût.
-          </p>
-        </article>
-
-        <article id="fauxFinishing">
-          <center><h1 class="major">Faux Finition</h1></center>
-          <span class="image main"><img src="images/fauxfinish.jpg" alt="" /></span>
-          <p>
-            A plus est l'une des rares entreprises de peinture qui propose également une variété de
-            faux finitions. Nous sommes des experts du plâtre vénitien (notre plus courant) ainsi
-            que des textures de base, des murs en marbre, du grain du bois et des faux finis
-            métalliques. Cette technique est recommandée pour les murs d'accentuation et les salles
-            spécialisées.
-          </p>
-        </article>
-
-        <!-- Exterior -->
-        <article id="exterior">
-          <center><h1 class="major">Extérieur</h1></center>
-          <ul class="actions">
-            <li>
-              <a href="#metal" class="button"><strong>Métal</strong></a>
-            </li>
-            <li>
-              <a href="#wood" class="button"><strong>Bois</strong></a>
-            </li>
-            <li>
-              <a href="#cementBrick" class="button"><strong>Ciment / Brique</strong></a>
-            </li>
-          </ul>
-
-          <br />
-          <h3>Commentaire Client</h3>
-          <div>
-            “A Plus Peinture et Vernis Inc a réalisé plusieurs projets pour nous au cours de la
-            dernière année. Nous sommes extrêmement satisfaits de la qualité du service qu'ils ont
-            fourni. L'équipe est très professionnelle et polie.”
-          </div>
-          <div style="float: right">-John K.</div>
-          <br />
-          <div style="float: right">
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-          </div>
-        </article>
-
-        <article id="metal">
-          <center><h1 class="major">Métal</h1></center>
-          <span class="image main"><img src="images/metal.jpg" alt="" /></span>
-          <p>
-            Vous en avez assez des garde-corps et des portes rouillés et ébréchés? A Plus excelle
-            dans la remise à neuf des métaux extérieurs par le meulage, l'amorçage et la peinture.
-          </p>
-        </article>
-
-        <article id="wood">
-          <center><h1 class="major">Bois</h1></center>
-          <span class="image main"><img src="images/woodexterior.jpg" alt="" /></span>
-          <p>
-            A Plus Peinture et Vernis ponceront et / ou laveront à la pression votre finition de
-            bois existante avant d'ajouter une nouvelle couche de vie. A vous de choisir entre une
-            finition peinture ou vernis.
-          </p>
-        </article>
-
-        <article id="cementBrick">
-          <center><h1 class="major">Ciment / Brique</h1></center>
-          <span class="image main"><img src="images/brick.png" alt="" /></span>
-          <p>
-            Une nouvelle couche de peinture redonnera vie à toute texture extérieure. Nous avons
-            plusieurs techniques, telles que le blanchiment à la chaux, la peinture et un certain
-            nombre d'autres fausses finitions.
-          </p>
-        </article>
-
-        <!-- Testimonials
-						<article id="Testimonials">
-							<center><h1 class="major">WHAT PEOPLE SAY ABOUT US</h1></center>
-							
-						</article> -->
-
-        <!-- <article id="info">
-							<center><h1 class="major">info</h1></center>
-						
-							<p>To get in touch with us, please call <strong>514-839-6448</strong> or send us a message using this form</p>
-							<form method="post" action="https://formspree.io/alexviapiano@hotmail.com">
-								<div class="field half first">
-									<label for="name">Name</label>
-									<input type="text" name="first name" id="name" /><br>
-								</div>
-								<div class="field half">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" /><br>
-								</div>
-								<div class="field half">
-									<label for="telephone">Telephone</label>
-									<input type="text" name="telephone" id="telephone" /><br>
-								</div>
-								<div class="field half">
-									<label for="projectDetails">Project Details</label>
-									<input type="text" name="projectDetails" id="Project Details" /><br>
-								</div>
-								<br>
-
-								<button type="button">GET PAINTERS</button>
-						</article> -->
 
         <!-- Estimation -->
         <article id="estimation">
           <center><h1 class="major">Demande de Soumission</h1></center>
           <p>
             Pour nous contacter, veuillez nous appeler au
-            <strong>514-839-6448</strong> ou nous envoyer un message en utilisant ce formulaire
+            <strong>514-XXX-XXXX</strong> ou nous envoyer un message en utilisant ce formulaire
           </p>
           <form method="post" action="https://formspree.io/alexviapiano@hotmail.com">
             <div class="field half first">
@@ -330,29 +160,13 @@
             </div>
             <br />
             <div class="field">
-              <label for="demo-category">Catégorie</label>
-              <div class="select-wrapper">
-                <select name="category" id="demo-category">
-                  <option value="">-</option>
-                  <option value="Paint">Peinture</option>
-                  <option value="Varnish">Vernis</option>
-                  <option value="Woodwork">Les Boiseries</option>
-                  <option value="FauxFinishing">Faux Finition</option>
-                  <option value="Metal">Métal</option>
-                  <option value="Wood">Bois</option>
-                  <option value="CementBrick">Ciment / Brique</option>
-                </select>
-              </div>
-            </div>
-            <br />
-            <div class="field">
               <label for="message">Message</label>
               <textarea name="message" id="message" rows="4"></textarea>
             </div>
             <br />
             <ul class="actions">
               <li>
-                <input type="submit" value="Trouver des Peintres" class="special" />
+                <input type="submit" value="Envoyer" class="special" />
               </li>
             </ul>
           </form>
