--- a/index.html
+++ b/index.html
@@ -119,16 +119,11 @@
         <nav>
           <ul id="menu">
             <li>
-              <a href="#interior"><b>Interior</b></a>
-            </li>
-            <li>
-              <a href="#exterior"><b>Exterior</b></a>
+              <a href="#landscaping"><b>Service</b></a>
             </li>
             <li>
               <a href="gallery/projects.html"><b>Gallery</b></a>
             </li>
-            <!-- <li><a href="#info"><b>Info</b></a></li> -->
-            <!-- <li><a href="#testimonials"><b>Testimonials</b></a></li> -->
           </ul>
         </nav>
       </header>
@@ -136,173 +131,15 @@
       <!-- Main -->
       <div id="main">
         <!-- Interior -->
-        <article id="interior">
-          <center><h1 class="major">Interior</h1></center>
-          <ul class="actions">
-            <li>
-              <a href="#painting" class="button"><strong>Painting</strong></a>
-            </li>
-            <li>
-              <a href="#varnishing" class="button"><strong>Varnishing</strong></a>
-            </li>
-            <li>
-              <a href="#woodwork" class="button"><strong>Woodwork</strong></a>
-            </li>
-            <li>
-              <a href="#fauxFinishing" class="button"><strong>Faux Finishing</strong></a>
-            </li>
-          </ul>
-
-          <br />
-          <h3>Customer comment</h3>
-          <div>
-            “Anthony and his team are great! They are professional, prompt and on time, they provide
-            quality work and they are all so friendly . I would recommend A plus to any of my
-            friends and family!”
-          </div>
-          <div style="float: right">-Tony A.</div>
-          <br />
-          <div style="float: right">
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-          </div>
+        <article id="landscaping">
+          <center>
+            <h1 class="major">Service</h1>
+            <div
+              id="map_canvas"
+              style="width: 400px; height: 300px; border-radius: 5px; margin-bottom: 10px"
+            ></div>
+          </center>
         </article>
-
-        <article id="painting">
-          <center><h1 class="major">Painting</h1></center>
-          <span class="image main"><img src="images/painting.jpg" alt="" /></span>
-          <p>
-            At <strong>A Plus</strong>, we provide complete interior residential and commercial
-            painting all across the Montreal area. Whether you have a small apartment, a large home,
-            or an office, the A Plus team strives for excellence and will ensure your property looks
-            its finest.
-          </p>
-        </article>
-
-        <article id="varnishing">
-          <center><h1 class="major">Varnishing</h1></center>
-          <span class="image main"><img src="images/varnishing.jpg" alt="Varnish" /></span>
-          <p>
-            One of our main specialties is staining and varnishing. We do it all from newly
-            installed wood framing, to refurbishing old doors.
-          </p>
-        </article>
-
-        <article id="woodwork">
-          <center><h1 class="major">Woodwork</h1></center>
-          <span class="image main"><img src="images/woodwork.jpg" alt="" /></span>
-          <p>
-            A plus gives furniture a new lease on life. Using lacquer and specialty products, we are
-            able to completely transform old furniture into new furniture at a fraction of the cost.
-          </p>
-        </article>
-
-        <article id="fauxFinishing">
-          <center><h1 class="major">Faux finishing</h1></center>
-          <span class="image main"><img src="images/fauxfinish.jpg" alt="" /></span>
-          <p>
-            A plus is one of the few painting companies who also offer a variety of faux finishings.
-            We are experts in venetian plaster (our most common) along with basic textures, marble
-            walls, wood grain and metallic faux finishes. This technique is recommended for accent
-            walls and specialty rooms.
-          </p>
-        </article>
-
-        <!-- Exterior -->
-        <article id="exterior">
-          <center><h1 class="major">Exterior</h1></center>
-          <ul class="actions">
-            <li>
-              <a href="#metal" class="button"><strong>Metal</strong></a>
-            </li>
-            <li>
-              <a href="#wood" class="button"><strong>Wood</strong></a>
-            </li>
-            <li>
-              <a href="#cementBrick" class="button"><strong>Cement / Brick</strong></a>
-            </li>
-          </ul>
-
-          <br />
-          <h3>Customer comment</h3>
-          <div>
-            “A Plus Paint and Varnish have done several projects for us over the last year. We are
-            extremely happy with the quality of the service they have provided. The team is very
-            professional and polite.”
-          </div>
-          <div style="float: right">-John K.</div>
-          <br />
-          <div style="float: right">
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-            <span class="icon fa-star"></span>
-          </div>
-        </article>
-
-        <article id="metal">
-          <center><h1 class="major">Metal</h1></center>
-          <span class="image main"><img src="images/metal.jpg" alt="" /></span>
-          <p>
-            Tired of rusted and chipped railings and doors? A Plus excels at refurbishing exterior
-            metals through grinding, priming and painting.
-          </p>
-        </article>
-
-        <article id="wood">
-          <center><h1 class="major">Wood</h1></center>
-          <span class="image main"><img src="images/woodexterior.jpg" alt="" /></span>
-          <p>
-            A Plus Paint and Varnish will sand and/or pressure wash your existing wood finishing
-            before adding a new coat of life. It's up to you to choose between a paint or varnish
-            finish.
-          </p>
-        </article>
-
-        <article id="cementBrick">
-          <center><h1 class="major">Cement / Brick</h1></center>
-          <span class="image main"><img src="images/brick.png" alt="" /></span>
-          <p>
-            A fresh coat of paint will bring any exterior texture back to life. We have several
-            techniques, such as whitewashing, painting and number of other faux finishes.
-          </p>
-        </article>
-
-        <!-- Testimonials
-						<article id="Testimonials">
-							<center><h1 class="major">WHAT PEOPLE SAY ABOUT US</h1></center>
-							
-						</article> -->
-
-        <!-- <article id="info">
-							<center><h1 class="major">info</h1></center>
-						
-							<p>To get in touch with us, please call <strong>514-839-6448</strong> or send us a message using this form</p>
-							<form method="post" action="https://formspree.io/alexviapiano@hotmail.com">
-								<div class="field half first">
-									<label for="name">Name</label>
-									<input type="text" name="first name" id="name" /><br>
-								</div>
-								<div class="field half">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" /><br>
-								</div>
-								<div class="field half">
-									<label for="telephone">Telephone</label>
-									<input type="text" name="telephone" id="telephone" /><br>
-								</div>
-								<div class="field half">
-									<label for="projectDetails">Project Details</label>
-									<input type="text" name="projectDetails" id="Project Details" /><br>
-								</div>
-								<br>
-
-								<button type="button">GET PAINTERS</button>
-						</article> -->
 
         <!-- Estimation -->
         <article id="estimation">
@@ -318,22 +155,6 @@
               <label for="email">Email</label>
               <input type="text" name="email" id="email" />
             </div>
-            <!-- <br>
-								<div class="field">
-									<label for="demo-category">Category</label>
-									<div class="select-wrapper">
-										<select name="category" id="demo-category">
-											<option value="">-</option>
-											<option value="Paint">Paint</option>
-											<option value="Varnish">Varnish</option>
-											<option value="Woodwork">Woodwork</option>
-											<option value="FauxFinishing">Faux Finishing</option>
-											<option value="Metal">Metal</option>
-											<option value="Wood">Wood</option>
-											<option value="CementBrick">Cement / Brick</option>
-										</select>
-									</div>
-								</div> -->
             <br />
             <div class="field">
               <label for="message">Message</label>
@@ -376,5 +197,57 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"
+      async
+      defer
+    ></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"></script>
+
+    <!-- 
+    <style type="text/css">
+      #map_canvas {
+        display: none;
+      }
+    </style> -->
+
+    <script>
+      document.getElementById('map_canvas').style.display = 'block';
+
+      // create the map
+      var myOptions = {
+        zoom: 10,
+        center: new google.maps.LatLng(45.599917, -73.583289),
+        mapTypeId: google.maps.MapTypeId.ROADMAP,
+      };
+
+      map = new google.maps.Map(document.getElementById('map_canvas'), myOptions);
+
+      var marker = new google.maps.Marker({
+        position: { lat: 45.599917, lng: -73.583289 },
+        map: map,
+        title: 'A1 Gazon',
+      });
+
+      const flightPlanCoordinates = [
+        { lat: 45.55179539091031, lng: -73.53537650249416 },
+        { lat: 45.59697554388466, lng: -73.64249320171291 },
+        { lat: 45.68242987045758, lng: -73.65897269390041 },
+        { lat: 45.693941831318185, lng: -73.48044486186916 },
+        { lat: 45.55179539091031, lng: -73.53537650249416 },
+      ];
+
+      const flightPath = new google.maps.Polyline({
+        path: flightPlanCoordinates,
+        geodesic: true,
+        strokeColor: '#FF0000',
+        strokeOpacity: 1.0,
+        strokeWeight: 2,
+      });
+
+      flightPath.setMap(map);
+    </script>
   </body>
 </html>
