--- a/fr.html
+++ b/fr.html
@@ -148,7 +148,7 @@
             Pour nous contacter, veuillez nous appeler au
             <strong>514-XXX-XXXX</strong> ou nous envoyer un message en utilisant ce formulaire
           </p>
-          <form method="post" action="https://formspree.io/alexviapiano@hotmail.com">
+          <form method="post" action="https://formspree.io/f/xgebvwwk">
             <div class="field half first">
               <label for="name">Nom</label>
               <input type="text" name="first name" id="name" />
