--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <article id="estimation">
           <center><h1 class="major">Estimation</h1></center>
           <p>To get in touch with us send us a message using this form</p>
-          <form method="post" action="https://formspree.io/a1gazon@a1gazon.com">
+          <form method="post" action="https://formspree.io/f/xgebvwwk">
             <div class="field half first">
               <label for="name">Name</label>
               <input type="text" name="first name" id="name" />
