--- a/gallery/projects.html
+++ b/gallery/projects.html
@@ -88,7 +88,7 @@
 						<article class="thumb">
 							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
 						</article>
-						<article class="thumb">
+						<!-- <article class="thumb">
 							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
@@ -113,7 +113,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt="" /></a>
-						</article>
+						</article> -->
 					</div>
 
 		
