--- a/gallery/projectsfr.html
+++ b/gallery/projectsfr.html
@@ -88,7 +88,7 @@
 						<article class="thumb">
 							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
 						</article>
-						<article class="thumb">
+						<!-- <article class="thumb">
 							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
@@ -107,7 +107,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt="" /></a>
-						</article>
+						</article> -->
 					</div>
 
 		
